--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="저장"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="360dp"></LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+
+    <ImageView
+        android:id="@+id/test_Image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        ></ImageView>
+
+
+
+        </LinearLayout>
+
+
 
 
 
