SubACtivity에 ListView를 추가해보았다.

--- a/app/src/main/res/layout/activity_subactivity.xml
+++ b/app/src/main/res/layout/activity_subactivity.xml
@@ -24,4 +24,9 @@
         android:layout_height="wrap_content"
         android:text="뒤로"/>
 
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
