--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="저장"/>
-    <Button
-        android:id="@+id/btn_NDmove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Navigation Activity"/>
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
