--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
 
     android:orientation="vertical"
     tools:context=".MainActivity">
 
 
 
-    <EditText
-        android:id="@+id/et_id"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-
-        android:hint="아이디를 입력하세요."/>
-
-    <Button
-        android:id="@+id/btn_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="저장"/>
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp"></LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/et_id"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
 
-    <ImageView
-        android:id="@+id/test_Image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
-        ></ImageView>
+            android:hint="아이디를 입력하세요."/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
+            <Button
+                android:id="@+id/btn_test"
+                android:layout_width="143dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="저장" />
+
+            <Button
+                android:id="@+id/btn_openmenu"
+                android:layout_width="143dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="메뉴" />
 
 
         </LinearLayout>
 
 
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
+            android:layout_margin="30dp" />
+
+        <ImageView
+            android:id="@+id/test_Image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="center"></ImageView>
+
+
+        
+        
+    </LinearLayout>
+
+
+
+
+    <include layout="@layout/activity_drawer"/>
 
 
 
 
 
 
-  </LinearLayout>
+
+
+  </androidx.drawerlayout.widget.DrawerLayout>
